--- a/web/app.fluidity.money/app/styles/dashboard/airdrop.scss
+++ b/web/app.fluidity.money/app/styles/dashboard/airdrop.scss
@@ -690,10 +690,11 @@ $holo: linear-gradient(
   align-self: center;
   box-sizing:border-box;
   flex-direction: column;
-  gap: 4em;
+  gap: 150px;
   overflow: hidden;
   padding-top: 200px;
   min-height: 100vh;
+  padding-bottom: 150px;
 
   .recap-hero {
     position: relative;
@@ -811,6 +812,7 @@ $holo: linear-gradient(
     }
 
     .volume-border {
+      aspect-ratio: 1/1;
       grid-column: 2 / 3;
       grid-row: 1 / 3;
       position: relative;
@@ -847,7 +849,6 @@ $holo: linear-gradient(
       display: flex;
       gap: 2em;
       grid-column: 1 / 3;
-      margin-bottom: 50px;
     }
 
     .recap-bottle-distribution-container {
@@ -912,6 +913,28 @@ $holo: linear-gradient(
             stroke: currentColor !important;
           }
         }
+      }
+    }
+  }
+
+  &.recap-mobile {
+    padding-top: 100px;
+
+    .recap-stats {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      gap: 100px;
+
+      .recap-mx-list {
+        height: 100px;
+        justify-content: flex-start;
+      }
+
+      .volume-border {
+        width: 100%;
+        box-sizing: border-box;
+        aspect-ratio: 1/1;
       }
     }
   }
